--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,6 +13,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    background-color: #000000;
     
 
     height: 2491vh;
@@ -31,6 +33,8 @@ header {
     background-repeat: no-repeat;
     background-position: center ;
     background-image: ;
+    border-bottom:0.1rem  solid ;
+    border-color: #33A8DB;
 }
 
 .logo {
@@ -64,10 +68,12 @@ header {
     font-weight: 900;
     color: #33A8DB
     ;
+    margin-top: 2.1rem;
 }
 
 .banner-content p{
     width: 51.0rem;
+    margin-top: 2.2rem;
     
 
     font-size: 2.0rem;
@@ -76,12 +82,17 @@ header {
 }
 
 .banner-content button{
-    padding: 1.9rem 9.1rem 1.9rem 9.1rem;
+
+    width: 32.6rem;
+    height: 5.7rem;
+    padding: ;
     font-size: 1.6rem;
     font-weight: 900;
     color: #31A8DD;
     background:  #00000000;
-    border: 0.2rem;
-    border-color: #3BA1CD ;
+    border: 0.2rem solid;
+    border-color: linear-gradient(#3BA1CD, #1572B7) ;
+    white-space: nowrap;
+    margin-top: 2.2rem;
 
 }
