--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -19,7 +19,7 @@ body {
 
     height: 2491vh;
 }
-
+/*Header*/
 header {
     display: flex;
     justify-content: center;
@@ -54,8 +54,6 @@ header {
     
 }
 
-
-
 .banner-content {
     display: flex;
     justify-content: center;
@@ -84,8 +82,7 @@ header {
     font-size: 2.0rem;
     font-weight: 400;
     color: #FFFFFF;
-    text-align: justify;
-    
+    text-align: justify;   
 }
 
 .banner-content button{
@@ -117,3 +114,85 @@ header {
     border: 0;
     transition: 0.8s;
 }
+
+/* Main */
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    width: 144.0rem;
+    height: 171.6rem;
+}
+
+#course-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    width: 144.0rem;
+    height: 53.3rem;
+
+    background-color: #000000;
+    border-bottom: 0.1rem solid;
+    border-color: #33A8DB;
+}
+
+#course-content h2 {
+    width: 47.7rem;
+    height: 3.8rem;
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: #33A8DB;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
+}
+
+#course-content p {
+    width: 79.2rem;
+    height: 3.8rem;
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 2.8rem;
+}
+
+.modules-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.module {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 53.5rem;
+    height: 5.1rem;
+    border: 0.1rem solid;
+    border-color: #33A8DB;
+    border-radius: 3rem;
+    background-color: 
+    #252525;
+    
+    font-size: 1.6rem;
+    color: #FFFFFF;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 2.4rem;
+    
+
+    
+}
+
+.module span {
+    color: #33A8DB;
+    padding-right: 0.4rem;
+}
+
