--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,8 +16,8 @@ body {
 
     background-color: #000000;
     
-
-    height: 2491vh;
+    width: 144.0rem;
+    height: 249.1rem;
 }
 /*Header*/
 header {
@@ -138,6 +138,7 @@ main {
     background-color: #000000;
     border-bottom: 0.1rem solid;
     border-color: #33A8DB;
+    margin-bottom: ;
 }
 
 #course-content h2 {
@@ -149,6 +150,7 @@ main {
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.4rem;
+    margin-top: 12.2rem;
 }
 
 #course-content p {
@@ -166,6 +168,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 9.0rem;
 }
 
 .module {
@@ -196,3 +199,93 @@ main {
     padding-right: 0.4rem;
 }
 
+#transform-world {
+    display: flex;
+    align-items: center;
+    justify-content: ;
+    
+    width: 144.0rem;
+    height: 96.0rem;
+    background-color: #00000000;
+    border-bottom: 0.1rem solid;
+    border-color: #31A8DD;
+}
+
+#transform-world p {
+    width: 24.4rem;
+    height: 14.1rem;
+    font-size: 4.0rem;
+    font-weight: 900;
+    color: #FFFFFF;
+    text-align: ;
+    text-transform: lowercase;
+}
+
+#professional-challenges {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    width: 144.0rem;
+    height: 82.0rem;
+    border-bottom: 0.1rem solid;
+    border-color: #33A8DB;
+}
+
+#professional-challenges h2 {
+    width: 74.6rem;
+    height: 7.6rem;
+
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: #33A8DB;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
+    margin-top: 7.7rem;
+}
+
+#professional-challenges img{
+    margin-top: 3.2rem;
+}
+
+#professional-challenges p{
+    width: 79.2rem;
+    height: 7.6rem;
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 4.7rem;
+    margin-bottom: 9.2rem;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 144.0rem;
+    height: 17.0rem;
+    background-image: linear-gradient(#000000,#001d29);
+}
+
+footer img{
+    margin-bottom: 0.5rem;
+}
+
+footer p {
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+footer a {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-decoration: none;
+    color: #33A8DB;
+}
